Criação da documentação GET para editar um de fornecedor: Close #30
